--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>lgp-30-bit-serial</title>
   </head>
   <body>
+    <pre>hello deploy-pages</pre>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
